crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__validator__test__task_extends_in_root_error_message_multiple_tasks.snap
---
source: crates/turborepo-lib/src/turbo_json/validator.rs
expression: error_messages
---
[
    "The \"extends\" key on task \"build\" can only be used in Package Configurations.",
    "The \"extends\" key on task \"lint\" can only be used in Package Configurations.",
]
