crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__validator__test__validate_extends_multiple_extends_not_including_root_true.snap
---
source: crates/turborepo-lib/src/turbo_json/validator.rs
expression: error_messages
---
[
    "You must extend from the root of the workspace first.",
]
