crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__validator__test__validate_no_package_task_syntax_multiple_mixed_tasks.snap
---
source: crates/turborepo-lib/src/turbo_json/validator.rs
expression: error_messages
---
[
    "\"pkg-a#test\". Use \"test\" instead.",
    "\"pkg-b#lint\". Use \"lint\" instead.",
]
