crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__validator__test__validate_no_package_task_syntax_single_package_task.snap
---
source: crates/turborepo-lib/src/turbo_json/validator.rs
expression: error_messages
---
[
    "\"my-package#build\". Use \"build\" instead.",
]
