crates/turborepo-lib/src/turbo_json/snapshots/turborepo_lib__turbo_json__validator__test__validate_with_has_no_topo.snap
---
source: crates/turborepo-lib/src/turbo_json/validator.rs
expression: error_messages
---
[
    "`with` cannot use dependency relationships.",
]
